--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: "Overlock-Regular";
+    src: url('../fonts/Overlock-Regular.ttf') format("truetype");
+}
+
 body {
     width: 100vw;
     height: 100vh;
@@ -7,6 +12,7 @@ body {
     /* justify-content: center; */
     align-items: center;
     text-align: center;
+    font-family: 'Overlock-Regular', monospace;
 }
 
 h1 {
@@ -16,6 +22,11 @@ h1 {
     margin-top: 4rem;
 }
 
+h2 {
+    color: #634a4d;
+    font-size: 2rem;
+}
+
 .pred-input-form {
     width: 80%;
     display: flex;
@@ -23,13 +34,17 @@ h1 {
 }
 
 .pred-input-form label {
-    padding: 1rem;
+    padding: 1rem 1rem 1rem 0;
     text-align: start;
     font-weight: 700;
+    font-size: 1.5rem;
 }
 
 .pred-input-form textarea {
     background-color: #eee;
+    border-radius: 0.7rem;
+    border: none;
+    padding: 1rem;
 }
 
 .pred-input-field {
@@ -46,6 +61,24 @@ h1 {
 .sbm-button button {
     padding: 1rem;
     font-size: 1.2rem;
+    color: #868686;
+    background-color: transparent;
+    border-radius: 1rem;
+    border: 0.15rem solid #868686;
+}
+
+.sbm-button button:hover {
+    color: #ddd;
+    background-color: #262626;
+    border: 0.15rem solid #262626;
+}
+
+.prediction-div {
+    padding: 1rem;
+}
+
+.prediction-div p {
+    font-size: 1.3rem;
 }
 
 .true-pred {
@@ -54,4 +87,18 @@ h1 {
 
 .false-pred {
     color: green;
+}
+
+.error-div {
+    display: flex;
+    justify-content: center;
+    font-size: 1.3rem;
+}
+
+.error-div p {
+    padding: 0.1rem;
+}
+
+.error-label {
+    color: red;
 }
